--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="./style.css ">
     <title>Survey Form</title>
 </head>
 <body>
-    <main>
+    <main id="principal">
         <div id="header">
             <h1 id="title">
                 freeCodeCamp Survey Form
@@ -17,21 +21,21 @@
             </p>
         </div>
         <form action="" id="survey-form">
-            <div>
+            <div id="form-group">
                 <label for="name">Name</label>
-                <input type="text" name="email" id="name-label  " required="" placeholder="Enter your name">
+                <input type="text" name="email" id="form-input" required="" placeholder="Enter your name">
             </div>
-            <div>
+            <div id="form-group">
                 <label for="email">Email</label>
-                <input type="text" name="email" id="email-label" required="" placeholder="Enter your email">
+                <input type="text" name="email" id="form-input" required="" placeholder="Enter your email">
             </div>
-            <div>
+            <div id="form-group">
                 <label for="age">Age (optional)</label>
-                <input type="number" name="age" id="number-label" min="1" max="99" required="" placeholder="Enter your age">
+                <input type="number" name="age" id="form-input" min="1" max="99" required="" placeholder="Enter your age">
             </div>
-            <div>
+            <div id="form-group">
                 <p>Which option best describes your current role?</p>
-                <select name="role" class="form-control" id="dropdown">
+                <select name="role" class="form-control" id="form-input">
                     <option disabled="" selected="" value="">Select current role</option>
                     <option value="student">Student</option>
                     <option value="job">Job</option>
@@ -40,7 +44,7 @@
                     <option value="other">Other</option>
                 </select>
             </div>
-            <div>
+            <div id="form-group">
                 <p>Would you recommend freeCodeCamp to a friend?</p>
                 <label>
                     <input type="radio" name="user-recomended" value="definetly" id="input-radio">
@@ -55,9 +59,9 @@
                     Not sure
                 </label>
             </div>
-            <div>
+            <div id="form-group">
                 <p>What is your favorite feature of freeCodeCamp?</p>
-                <select name="most-like" id="most-like" class="form-control">
+                <select name="most-like" id="form-input" class="form-control">
                     <option disabled="" selected="" value="">Select an option</option>
                     <option value="challenges">Challenges</option>
                     <option value="projects">Projects</option>
@@ -65,7 +69,7 @@
                     <option value="openSource">Open Source</option>
                 </select>
             </div>
-            <div>
+            <div id="form-group">
                 <p>What would you like to see improved? (Check all that apply)</p>
                 <label>
                     <input class="input-checkbox" name="prefer" value="front-end-proyects" type="checkbox">
@@ -112,11 +116,11 @@
                     Aditional courses
                 </label>
             </div>
-            <div>
+            <div id="text-area">
                 <p>Any comments or suggestions?</p>
-                <textarea name="textarea" id="text-area" cols="30" rows="10" placeholder="Enter your message here..."></textarea>
+                <textarea name="textarea" id="form-input" cols="30" rows="10" placeholder="Enter your message here..."></textarea>
             </div>
-            <div>
+            <div id="button">
                 <button id="submit" class="submit-button" type="submit">
                     Submit
                 </button>
